name:                app-search
version:             0.1.0.0
synopsis:            Elastic Search Bank Query Language
description:         Please see README.md
homepage:            https://github.com/jckdrpr/bank-query-es#readme
license:             BSD3
license-file:        LICENSE
author:              Sherub Thakur
maintainer:          sherub.thakur@gmail.com
copyright:           2016 Sherub Thakur
category:            Web
build-type:          Simple
extra-source-files:  Readme.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , BQL
                     , Elastic
                     , Types
                     , Utils
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , either
                     , parsec
                     , time
                     , bloodhound
                     , http-client
                     , http-types
                     , mtl
                     , scotty
                     , text
                     , transformers
                     , wai
                     , wai-cors
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable app-search-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , app-search
  default-language:    Haskell2010

test-suite app-search-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       BQLTest
                     , ElasticTest
  main-is:             Spec.hs
  build-depends:       base
                     , app-search
                     , containers
                     , HUnit
                     , parsec
                     , bloodhound
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jckdrpr/bank-query-es
